# stereotype-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml
configs/: pricing.yaml
configs/experiments/: gsa_first_impression_v1.yaml  smoke_gsa_full.yaml  smoke_gsa_single_model.yaml
src/stereotype_bench/: __init__.py  cli.py  runner.py  text_clean.py  types.py
src/stereotype_bench/costs/: __init__.py  db.py  guard.py  pricing.py
src/stereotype_bench/measures/: __init__.py  protocol.py  stub.py
src/stereotype_bench/plots/: __init__.py  distributions.py  means_ci.py
src/stereotype_bench/providers/: __init__.py  base.py  openrouter.py
src/stereotype_bench/stimuli/: __init__.py  base.py
src/stereotype_bench/tasks/: __init__.py  base.py  first_impression.py
tests/: test_cli.py  test_costs.py  test_first_impression_variants.py  test_measures.py  test_providers.py  test_text_clean.py
